tests/NormalTests/paczka1/fuzzy1/53308820.err
Error in line 9: 6krr5toecy6 S447 10,1
Error in line 19: A106 A106 61,7
Error in line 29: 28XT A497 39,8
Error in line 13: 7KA04svdxS S447 187,2
Error in line 28: dM2dimL A497 51,7
Error in line 16: qnkAmNm8o4J S497 48,9
Error in line 34: dM2dimL A106 8,1
